<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Get Mate</string>
    <string name="hint_email">username</string>
    <string name="hint_password">password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_fb">Sign In With Facebook</string>
    <string name="Cancel">Cancel</string>
    <string name="Done">Done</string>
    <string name="select">Select</string>
    <string name="intro">Intro</string>
<string name="email">email</string>
    <string name="undo">back</string>
    <string name="school">school</string>
    <string name="college">college</string>
    <string name="phone">phone</string>
    <string name="contact">Contact</string>
    <string name="edu">Education</string>
    <string name="work">Work</string>
    <string name="editprofile"><b>Edit Profile</b></string>
    <string name="interest"><b>Interest</b></string>
    <string name="search_hint">Search</string>
    <string name="sports">Sports</string>
    <string name="fbappid">442175592828339</string>
    <string name="btn_register">REGISTER</string>
    <string name="forgot_detail">Forgot your login details? <u><b>Get help signing in.</b></u> </string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="people">People</string>
    <string name="events">Events</string>
    <string name="findmate">Find Mate</string>
    <string name="map">Map</string>
    <string name="profile">Profile</string>
    <string name="timeline">Timeline</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="new_user"><u><b>New User Register</b></u></string>
    <string name="guest_user"><u><b>Guest Login</b></u></string>
    <string name="OR">OR</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDveIZVazXDL60CXqODIvzzBM4l_XzE2uc</string>
    <string name="beginner">"Beginner"</string>
    <string name="intermediate">"Intermediate"</string>
    <string name="expert">"Expert"</string>
    <string name="welcome">"<b>Get Your Mate</b>"</string>
</resources>