<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"

    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/childlinearlayout"
        >
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@drawable/checkboximage"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:id="@+id/checkbox"
        android:focusable="false"
        />
    <com.getmate.getmate.RoundedImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/sports"
        android:textSize="14dp"
        android:textStyle="bold"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="4dip"
        android:layout_marginTop="4dip"
        android:layout_marginBottom="4dip"
        android:id="@+id/childimage"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="4dip"
        android:layout_marginTop="4dip"
        android:text="@string/sports"
        android:textAllCaps="false"
        android:textSize="15dip"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:id="@+id/childtext"
   />
</LinearLayout>

<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:id="@+id/levelpack"
android:orientation="horizontal"
android:background="@color/orange"
android:visibility="gone"
    >
<RadioGroup
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="3"
    android:gravity="center"
    android:layout_gravity="center"
    android:layout_margin="1dp"
    android:id="@+id/radiogroup"
    >
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_weight="1"
        android:text="@string/beginner"
        android:id="@+id/beginner"
        android:background="@drawable/rbt_selector"
        android:textColor="@drawable/textradio"
        android:button="@null"
        android:checked="false"
        android:gravity="center"
        android:padding="5dp"
        android:textSize="12dp"
        android:textStyle="bold"
        />
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_weight="1"
        android:text="@string/intermediate"
        android:id="@+id/intermediate"
        android:background="@drawable/rbt_selector"
        android:textColor="@drawable/textradio"
        android:button="@null"
        android:gravity="center"
        android:padding="5dp"
        android:textSize="12dp"
        android:textStyle="bold"
         android:checked="false"


        />
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_weight="1"
        android:text="@string/expert"
        android:id="@+id/expert"
        android:background="@drawable/rbt_selector"
        android:textColor="@drawable/textradio"
        android:button="@null"
        android:gravity="center"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="12dp"
        android:checked="false"
        />
</RadioGroup>

</LinearLayout>
    </LinearLayout>