<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="16dp"
    tools:context=".MainActivity"
    android:background="@color/blue"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/beginner"
        android:gravity="center"
        android:id="@+id/textBeginner"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="12dp"
        android:fontFamily="serif"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/beginnercardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
android:layout_margin="5dp"
        android:layout_below="@+id/textBeginner"
        android:background="@color/blue"
        android:orientation="horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intermediate"
        android:gravity="center"
        android:id="@+id/textIntermediate"
        android:layout_below="@id/beginnercardView"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="12dp"
        android:layout_margin="2dp"
        android:fontFamily="serif"
        />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/intermediatecardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/textIntermediate"
        android:layout_margin="5dp"
        android:background="@color/blue"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/expert"
        android:gravity="center"
        android:id="@+id/textExpert"
        android:layout_below="@id/intermediatecardView"
        android:textStyle="bold"
        android:layout_margin="2dp"
        android:textColor="@color/white"
        android:textSize="12dp"
        android:fontFamily="serif"
        />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/expertCardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/textExpert"
        android:layout_margin="5dp"
        android:background="@color/blue"
        />
</RelativeLayout>